# kawaiifi

./: CHANGELOG.md  Cargo.toml  README.md
ffi/: Cargo.toml  README.md  build.rs
ffi/dotnet/: Kawaiifi.slnx  README.md
ffi/dotnet/Kawaiifi.Net/: Kawaiifi.Net.csproj  SecurityProtocols.cs  WifiProtocols.cs
ffi/dotnet/examples/Ies/: Program.cs
ffi/examples/: CMakeLists.txt  README.md  bss_data.c  ies.c  scan.c
ffi/examples/c/: .gitignore  CMakeLists.txt  README.md  bss_data.c  ies.c  scan.c
ffi/examples/dotnet/: .gitignore  Kawaiifi.slnx  README.md
ffi/examples/dotnet/Kawaiifi.Net/: Band.cs  Bss.cs  BssList.cs  BusType.cs  CapabilityInfo.cs  ChannelWidth.cs  CwInterfaceMode.cs  CwPhyMode.cs  CwSecurity.cs  Field.cs  FieldList.cs  Ie.cs  Interface.cs  InterfaceList.cs  Kawaiifi.Net.csproj  Scan.cs  WifiAmendments.cs
ffi/examples/dotnet/examples/Scan/: Program.cs
ffi/include/: NativeMethods.Linux.g.cs  NativeMethods.MacOS.g.cs  NativeMethods.Windows.g.cs  NativeMethods.g.cs  NativeTypes.cs  kawaiifi.h
ffi/src/: bss.rs  common.rs  field.rs  ies.rs  interface.rs  lib.rs  scan.rs
ffi/src/linux/: bss.rs  interface.rs  mod.rs  scan.rs
ffi/src/macos/: bss.rs  interface.rs
ffi/src/windows/: bss.rs  interface.rs  mod.rs
gui/: .gitignore  Cargo.toml  PACKAGING.md  README.md  meson.build  meson.options
gui/aur/: .gitignore  PKGBUILD
gui/data/: com.github.kawaiifi.desktop.in  com.github.kawaiifi.gschema.xml.in  com.github.kawaiifi.service.in  fi.kawaii.kawaiifi.desktop.in  fi.kawaii.kawaiifi.gschema.xml  fi.kawaii.kawaiifi.metainfo.xml.in  meson.build
gui/data/icons/: meson.build
gui/data/resources/: README.md  manuf  manuf.kawaiifi  meson.build  resources.gresource.xml  style.css
gui/data/resources/ui/: bss_capability_info.blp  bss_chart.blp  bss_elements.blp  bss_filter.blp  bss_ie_table.blp  bss_table.blp  filter_toggle.blp  interface_box.blp  interface_list.blp  interface_popover.blp  interface_row.blp  interface_toggle.blp  preferences_dialog.blp  probe_request.blp  scan_info_popover.blp  window.blp
gui/flatpak/: cargo-sources.json  com.github.kawaiifi.yml  fi.kawaii.kawaiifi.yml
gui/snap/: snapcraft.yaml
gui/src/: application.rs  config.rs  main.rs  meson.build  oui.rs  scan_file.rs  util.rs  vendor_cache.rs
gui/src/objects/: bss.rs  ie.rs  ie_field.rs  ie_tree_item.rs  interface.rs  mod.rs
gui/src/scan/: mod.rs  processing.rs  scan_file.rs
gui/src/widgets/: bss_capability_info.rs  bss_chart.rs  bss_filter.rs  column_view.rs  filter_toggle.rs  interface_box.rs  interface_list.rs  interface_popover.rs  interface_toggle.rs  mod.rs  preferences_dialog.rs  probe_request.rs  scan_info_popover.rs
gui/src/widgets/bss_chart/: data.rs  mod.rs  render.rs
gui/src/widgets/bss_elements/: mod.rs
gui/src/widgets/bss_elements/columns/: data.rs  id.rs  mod.rs  value.rs
gui/src/widgets/bss_ie_table/: mod.rs
gui/src/widgets/bss_ie_table/columns/: name.rs
gui/src/widgets/bss_table/: mod.rs  setup.rs
gui/src/widgets/bss_table/columns/: amendments.rs  band.rs  bssid.rs  channel.rs  channel_utilization.rs  channel_width.rs  color.rs  frequency.rs  last_seen.rs  max_rate.rs  mod.rs  protocols.rs  (+7 more)
gui/src/widgets/interface/: list.rs  mod.rs  toggle.rs
gui/src/window/: filtering.rs  mod.rs  scan_file_actions.rs  scan_file_dialog.rs  scan_processing.rs  scanning.rs  setup.rs
lib/: Cargo.toml  README.md
lib/examples/: bss_data.rs  ies.rs  scan_async.rs  scan_sync.rs
lib/src/: band.rs  channel_width.rs  field.rs  lib.rs  security_protocol.rs  wifi_amendment.rs  wifi_protocol.rs
lib/src/bss/: basic_service_set.rs  bss.rs  capability_info.rs  linux.rs  macos.rs  mod.rs  nl80211_bss.rs  scan_width.rs  windows.rs
lib/src/channel/: channel_width.rs  mod.rs
lib/src/ies/: advertisement_protocol.rs  antenna.rs  ap_channel_report.rs  ap_configuration_sequence_number.rs  awake_window.rs  bss_load.rs  challenge_text.rs  channel_switch_announcement.rs  country.rs  ds_parameter_set.rs  eht_capabilities.rs  eht_operation.rs  erp_info.rs  extended_capabilities.rs  extended_channel_switch_announcement.rs  field.rs  fils_indication.rs  he_capabilities.rs  he_operation.rs  he_six_ghz_band_capabilities.rs  ht_capabilities.rs  ht_operation.rs  ibss_parameter_set.rs  ie.rs  ie_data.rs  ie_id.rs  interworking.rs  measurement_pilot_transmission.rs  measurement_request.rs  mesh_configuration.rs  mesh_id.rs  mod.rs  mu_edca_parameter_set.rs  overlapping_bss_scan_params.rs  parse.rs  power_capability.rs  power_constraint.rs  reduced_neighbor_report.rs  rm_enabled_capabilities.rs  roaming_consortium.rs  (+19 more)
lib/src/ies/elements/: advertisement_protocol.rs  antenna.rs  ap_channel_report.rs  ap_configuration_sequence_number.rs  awake_window.rs  bss_load.rs  challenge_text.rs  channel_switch_announcement.rs  country.rs  ds_parameter_set.rs  eht_capabilities.rs  eht_operation.rs  erp_info.rs  extended_capabilities.rs  extended_channel_switch_announcement.rs  fils_indication.rs  he_capabilities.rs  he_operation.rs  he_six_ghz_band_capabilities.rs  ht_capabilities.rs  ht_operation.rs  ibss_parameter_set.rs  interworking.rs  measurement_pilot_transmission.rs  measurement_request.rs  mesh_configuration.rs  mesh_id.rs  mobility_domain.rs  mod.rs  mu_edca_parameter_set.rs  overlapping_bss_scan_params.rs  power_capability.rs  power_constraint.rs  reduced_neighbor_report.rs  rm_enabled_capabilities.rs  roaming_consortium.rs  rsn.rs  rsn_extension.rs  spatial_reuse_parameter_set.rs  ssid.rs  (+13 more)
lib/src/interface/: error.rs  interface.rs  interface_type.rs  linux.rs  macos.rs  mod.rs  windows.rs
lib/src/nl80211/: attr.rs  bss.rs  cmd.rs  error.rs  mod.rs  types.rs
lib/src/scan/: backend.rs  error.rs  flags.rs  mod.rs  nl80211.rs  results.rs  scan.rs
lib/src/scan/linux/: backend.rs  error.rs  flags.rs  mod.rs  network_manager.rs  nl80211.rs  results.rs  scan.rs
lib/src/scan/macos/: error.rs  results.rs
lib/src/scan/network_manager/: mod.rs  scan.rs  wireless_device.rs
lib/src/scan/nl80211/: mod.rs  results.rs  scan.rs  wait.rs
lib/src/scan/windows/: error.rs  mod.rs  results.rs
(+90 files in other folders)
