[package]
name = "kawaiifi"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
byteorder = "1.3.4"
cfg-if = "1.0.0"
enumflags2 = "0.6.4"
macaddr = "1.0.1"
num_enum = "0.5.1"
deku = { version = "0.20", features = ["logging"] }
log = "0.4"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
neli = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
