[package]
name = "kawaiifi-ffi"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[build-dependencies]
cbindgen = "0.29"
csbindgen = "1.9.7"

[dependencies]
kawaiifi = { version = "0.1.0", path = "../lib" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-wlan = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Com"] }

[lib]
name = "kawaiifi"
crate-type = ["cdylib", "staticlib"]
doc = false
