[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kawaiifi"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_8"] }
async-channel = "2.5.0"
chrono = "0.4.44"
const-hex = "1.18.1"
egui = "0.34.1"
egui_plot = "0.35"
fontconfig = "0.10.0"
gtk = { package = "gtk4", version = "0.11.2", features = ["blueprint", "v4_12"] }
gtk-egui-area = "0.3.0"
kawaiifi = { path = "../lib" }
nix = { version = "0.31.2", features = ["time"] }
oui = "0.8"
oui-data = "0.2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
