[package]
name = "gui"
version = "0.1.0"
edition = "2024"
publish = false
license = "GPL-3.0-or-later"

[[bin]]
name = "kawaiifi"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_8"] }
async-channel = "2.5.0"
chrono = "0.4.44"
# plotters-cairo 0.8 is still on cairo-rs 0.21 while gtk4 0.11 uses cairo-rs 0.22.
cairo_021 = { package = "cairo-rs", version = "0.21.5", default-features = false }
const-hex = "1.18.1"
gtk = { package = "gtk4", version = "0.11.2", features = ["blueprint", "v4_12"] }
enumflags2 = "0.7"
kawaiifi = { path = "../lib" }
nix = { version = "0.31.2", features = ["time"] }
oui = "0.8"
oui-data = "0.2.1"
plotters = "0.3.7"
plotters-cairo = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
