[package]
name = "kawaiifi"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
byteorder = "1.3.4"
chrono = { version = "0.4", features = ["serde"] }
deku = { version = "0.20", features = ["logging"] }
derive_more = { version = "2.0", features = ["full"] }
enumflags2 = "0.7"
log = "0.4"
neli = { version = "0.7.3", features = ["async"] }
num_enum = "0.7"
pci-ids = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
usb-ids = "1.2025.2"
zbus = { version = "5" }

[dev-dependencies]
env_logger = "*"
tokio = { version = "1", features = ["full"] }
