[package]
name = "kawaiifi"
version = "0.1.0"
authors = ["Zach Leytus <zach.leytus@gmail.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Wi-Fi scanning library for Linux, macOS, and Windows."
repository = "https://github.com/zleytus/kawaiifi"
documentation = "https://docs.rs/kawaiifi"
keywords = ["wifi", "wireless", "scanner", "networking", "80211"]
categories = ["network-programming", "hardware-support", "os::linux-apis", "os::macos-apis", "os::windows-apis"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.31", features = ["serde"] }
deku = "0.20"
derive_more = { version = "2.1.1", features = ["full"] }
enumflags2 = "0.7.9"
num_enum = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1.40", features = ["log"] }
typed-builder = "0.23.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
neli = { version = "0.7.3", features = ["async"] }
pci-ids = "0.2"
usb-ids = "1.2025.2"
zbus = { version = "5" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-core-wlan = "0.3.2"
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSData", "NSError", "NSEnumerator", "NSSet", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_NetworkManagement_WiFi"] }

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
